# odoo-dev

./: .gitignore  .project-tips  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
docs/: migration-mode.md
odoodev/: __init__.py  __main__.py  cli.py  i18n.py  output.py
odoodev/commands/: __init__.py  config.py  db.py  docker.py  env.py  init_cmd.py  migrate.py  pull.py  repos.py  run.py  setup_cmd.py  shell_setup.py  start.py  stop.py  venv.py
odoodev/core/: __init__.py  automation.py  database.py  docker_compose.py  environment.py  example_templates.py  git_ops.py  global_config.py  migration_config.py  odoo_config.py  playbook.py  prerequisites.py  process_manager.py  shell_integration.py  venv_manager.py  version_registry.py
odoodev/data/: versions.yaml
odoodev/data/examples/playbooks/: daily-update.yaml  full-refresh.yaml  restore-db.yaml  start-dev.yaml
odoodev/data/examples/v16/: odoo16_template.conf  postgresql.conf  repos.yaml  requirements.txt
odoodev/data/examples/v17/: odoo17_template.conf  repos.yaml  requirements.txt
odoodev/data/examples/v18/: odoo18_template.conf  repos.yaml  requirements.txt
odoodev/data/examples/v19/: odoo19_template.conf  postgresql.conf  repos.yaml  requirements.txt
odoodev/templates/: docker-compose.yml.j2  env.template.j2  odoo_template.conf.j2
odoodev/templates/shell/: odoodev-activate.bash  odoodev-activate.fish  odoodev-activate.zsh
odoodev/tui/: __init__.py  app.py  app.tcss  log_parser.py  odoo_process.py  screens.py  xmlrpc_client.py
odoodev/tui/widgets/: __init__.py  filter_bar.py  log_viewer.py  status_bar.py
tests/: conftest.py  test_addon_selector.py  test_automation.py  test_cli_config.py  test_database.py  test_db_backup.py  test_environment.py  test_example_templates.py  test_git_ops.py  test_global_config.py  test_i18n.py  test_interpreter_health.py  test_log_parser.py  test_migrate_command.py  test_migration_config.py  test_odoo_process.py  test_playbook.py  test_prerequisites.py  test_process_manager.py  test_process_manager_group.py  test_pull.py  test_restore_temp_dir.py  test_run_command.py  test_setup_command.py  test_shell_integration.py  test_start.py  test_start_language.py  test_start_odoo_options.py  test_stop.py  test_templates.py  test_tui_app.py  test_v19_log_handlers.py  test_venv_manager.py  test_venv_patch_version.py  test_version_registry.py  test_xmlrpc_client.py
usage/: config.md  db.md  docker.md  migrate.md  odoo-development-workflow.md  repos.md  run.md  setup.md  shell.md  start.md  venv.md
